--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,1 +1,43 @@
-<h1>edit  </h1>
+<form action="/expenses/{{expense._id}}?_method=PUT" method="POST" class="h-100">
+  <div class="form-group row ml-2 mb-5 text-center">
+    <span>*必填欄位</span>
+    <div class="col-sm-5 text-center">
+      <span>請修改你的支出</span>
+    </div>
+  </div>
+
+  <div class="form-group row ml-2 mb-5">
+    <label for="name" class="col-sm-2 col-form-label">名稱*:</label>
+    <div class="col-sm-5">
+      <input type="text" class="form-control border-dark" id="name" name="name" placeholder="支出名稱">
+    </div>
+  </div>
+
+  <div class="form-group row ml-2 mb-5">
+    <label for="date" class="col-sm-2 col-form-label">日期*:</label>
+    <div class="col-sm-5">
+      <input type="date" class="form-control border-dark" id="date" name="date" placeholder="支出日期" size="5">
+    </div>
+  </div>
+
+  <div class="form-group row ml-2 mb-5">
+    <label for="category" class="col-sm-2 col-form-label">類別*:</label>
+    <div class="col-sm-5">
+      <select id="category" name="category" class="form-control border-dark">
+        <option selected>Select</option>
+        <option value="1">晚餐</option>
+        <option value="2">中餐</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group row ml-2 mb-5">
+    <label for="amount" class="col-sm-2 col-form-label">金額*:</label>
+    <div class="col-sm-5">
+      <input type="number" class="form-control border-dark" id="amount" name="amount" placeholder="支出金額">
+    </div>
+  </div>
+  <div class="col-sm-8 text-center">
+    <button class="btn btn-success" type="submit">送出</button>
+  </div>
+</form>
