--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="h-100">
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,8 +18,10 @@
     </nav>
   </header>
 
-  <main>
-    {{{ body }}}
+  <main class="h-100">
+    <div class="container mt-5 w-100 h-75">
+        {{{ body }}}
+    </div>
   </main>
 
 
