feat: add new post function

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -23,7 +23,7 @@
   <div class="form-group row ml-2 mb-5">
     <label for="category" class="col-sm-2 col-form-label">類別*:</label>
     <div class="col-sm-5">
-      <select id="category" name="category" class="form-control border-dark">
+      <select id="category" name="categoryId" class="form-control border-dark">
         <option selected>Select</option>
         {{#each categories}}
         <option value={{this._id}}>{{this.name}}</option>
