--- a/views/new.hbs
+++ b/views/new.hbs
@@ -9,22 +9,23 @@
   <div class="form-group row ml-2 mb-5">
     <label for="name" class="col-sm-2 col-form-label">名稱*:</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control border-dark" id="name" name="name" placeholder="支出名稱">
+      <input type="text" class="form-control border-dark" id="name" name="name" value="{{name}}" placeholder="支出名稱">
     </div>
   </div>
 
   <div class="form-group row ml-2 mb-5">
     <label for="date" class="col-sm-2 col-form-label">日期*:</label>
     <div class="col-sm-5">
-      <input type="date" class="form-control border-dark" id="date" name="date" placeholder="支出日期" size="5">
+      <input type="date" class="form-control border-dark" id="date" name="date" value="{{date}}" placeholder="支出日期"
+        size="5">
     </div>
   </div>
 
   <div class="form-group row ml-2 mb-5">
     <label for="category" class="col-sm-2 col-form-label">類別*:</label>
     <div class="col-sm-5">
-      <select id="category" name="category" class="form-control border-dark">
-        <option selected>Select</option>
+      <select id="category" name="categoryId" class="form-control border-dark">
+        <option value="" selected>Select</option>
         {{#each categories}}
         <option value={{this._id}}>{{this.name}}</option>
         {{/each}}
@@ -35,7 +36,8 @@
   <div class="form-group row ml-2 mb-5">
     <label for="amount" class="col-sm-2 col-form-label">金額*:</label>
     <div class="col-sm-5">
-      <input type="number" class="form-control border-dark" id="amount" name="amount" placeholder="支出金額">
+      <input type="number" class="form-control border-dark" id="amount" name="amount" value="{{amount}}"
+        placeholder="支出金額">
     </div>
   </div>
   <div class="col-sm-8 text-center">
