feat: add home route and index page content

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,7 @@
 
   <main class="h-100">
     <div class="container mt-5 w-100 h-75">
-        {{{ body }}}
+      {{{ body }}}
     </div>
   </main>
 
@@ -34,6 +34,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
     integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
     crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/566fbb4b37.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
