--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,52 @@
-<h1>Home</h1>
+<!-- 類別篩選下拉選單 -->
+<form action="/" method="GET">
+  <div class="form-group ml-2 mb-5 col-sm-6 mr-auto ml-auto">
+    <select class="form-control" id="sort-bar" name="category">
+      <option value="all">類別</option>
+      {{#each categories}}
+      <option value="{{this._id}}">{{this.name}}</option>
+      {{/each}}
+    </select>
+  </div>
+
+  <button id="submit-button" class="d-none">submit</button>
+</form>
+
+<!-- 顯示總金額 -->
+<div class="d-flex justify-content-center mt-3">
+  <h3 class="mr-5" style="font-size:20px;">總金額：</h3>
+  <h2>{{totalAmount}}</h2>
+</div>
+
+<!--顯示每一筆記錄 -->
+{{#if records}}
+<div class="d-flex d-md-block col-sm-6 mr-auto ml-auto mt-5">
+  <table class="table table-striped table-hover align-middle">
+    <tbody>
+      {{#each records}}
+      <tr>
+        <td class="pt-4">
+          <i class="{{this.categoryId.icon}} ml-3" style="font-size:3em"></i>
+          <p class="font-weight-bold">{{this.categoryId.name}}</p>
+        </td>
+        <td>
+          <h3>{{this.name}}</h3>
+          <h3>{{this.date}}</h3>
+        </td>
+        <td class="pt-4">
+          <h3 style="font-size:3em">{{this.amount}}</h3>
+        </td>
+
+        <td><a href="/expenses/{{this._id}}/edit" class="btn btn-info mt-4">修改</a></td>
+        <td><button type="button" class="delete-button btn btn-danger mt-4" data-id={{this._id}}>刪除</button></td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+</div>
+{{/if}}
+
+<!--新增支出按鈕 -->
+<div class="d-flex justify-content-center mt-5">
+  <a href="/expenses/new" class="btn btn-warning">新增支出</a>
+</div>
