--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -39,6 +39,7 @@
     </div>
   </div>
   <div class="col-sm-8 text-center">
-    <button class="btn btn-success" type="submit">送出</button>
+    <button class="btn btn-success mr-2" type="submit">送出</button>
+    <a href="/" class="btn btn-success">返回</a>
   </div>
 </form>
