--- a/views/new.hbs
+++ b/views/new.hbs
@@ -41,6 +41,7 @@
     </div>
   </div>
   <div class="col-sm-8 text-center">
-    <button class="btn btn-success" type="submit">新增支出</button>
+    <button class="btn btn-success mr-2" type="submit">新增支出</button>
+    <a href="/" class="btn btn-success">返回</a>
   </div>
 </form>
