--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -9,14 +9,16 @@
   <div class="form-group row ml-2 mb-5">
     <label for="name" class="col-sm-2 col-form-label">名稱*:</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control border-dark" id="name" name="name" placeholder="支出名稱">
+      <input type="text" class="form-control border-dark" id="name" name="name" value="{{record.name}}"
+        placeholder="支出名稱">
     </div>
   </div>
 
   <div class="form-group row ml-2 mb-5">
     <label for="date" class="col-sm-2 col-form-label">日期*:</label>
     <div class="col-sm-5">
-      <input type="date" class="form-control border-dark" id="date" name="date" placeholder="支出日期" size="5">
+      <input type="date" class="form-control border-dark" id="date" name="date" value={{record.date}} placeholder="支出日期"
+        size="5">
     </div>
   </div>
 
@@ -24,7 +26,7 @@
     <label for="category" class="col-sm-2 col-form-label">類別*:</label>
     <div class="col-sm-5">
       <select id="category" name="categoryId" class="form-control border-dark">
-        <option selected>Select</option>
+        <option value="{{selected_category._id}}">{{selected_category.name}}</option>
         {{#each categories}}
         <option value={{this._id}}>{{this.name}}</option>
         {{/each}}
@@ -35,7 +37,8 @@
   <div class="form-group row ml-2 mb-5">
     <label for="amount" class="col-sm-2 col-form-label">金額*:</label>
     <div class="col-sm-5">
-      <input type="number" class="form-control border-dark" id="amount" name="amount" placeholder="支出金額">
+      <input type="number" class="form-control border-dark" id="amount" name="amount" value="{{record.amount}}"
+        placeholder="支出金額">
     </div>
   </div>
   <div class="col-sm-8 text-center">
