--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/expenses/{{expense._id}}?_method=PUT" method="POST" class="h-100">
+<form action="/expenses/{{record._id}}?_method=PUT" method="POST" class="h-100">
   <div class="form-group row ml-2 mb-5 text-center">
     <span>*必填欄位</span>
     <div class="col-sm-5 text-center">
