--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -35,6 +35,7 @@
     integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/566fbb4b37.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
