--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,7 @@
 <form action="/users/login" method="POST" class="h-100">
 
   <div class="col-sm-8 text-center mb-5">
+    {{> message}}
     <h1>使用者登入</h1>
   </div>
 
