--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,7 @@
 <form action="/users/register" method="POST" class="h-100">
 
   <div class="col-sm-8 text-center mb-5">
+    {{> message}}
     <h1>註冊使用者</h1>
   </div>
 
