--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,8 +1,10 @@
 <form action="/expenses/{{record._id}}?_method=PUT" method="POST" class="h-100">
 
+  <div class="col-sm-8 text-center mb-5">
+    {{> message}}
+  </div>
 
   <div class="form-group row ml-2 mb-5 text-center">
-    {{> message}}
     <span>*必填欄位</span>
     <div class="col-sm-5 text-center">
       <span>請修改你的支出</span>
