--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,8 +1,11 @@
 <form action="/expenses" method="POST" class="h-100">
 
 
-  <div class="form-group row ml-2 mb-5 text-center">
+  <div class="col-sm-8 text-center mb-5">
     {{> message}}
+  </div>
+
+  <div class="form-group row ml-2 mb-5 text-center">
     <span>*必填欄位</span>
     <div class="col-sm-5 text-center">
       <span>請輸入你的支出</span>
