feat: add isAuthenticated to display different view templates

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,7 +14,18 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand font-weight-bold" href="/">家庭計帳本</a>
+      <div class="container">
+        <a class="navbar-brand font-weight-bold" href="/">
+          {{#if isAuthenticated}}{{user.name}}的{{/if}}
+          家庭計帳本
+        </a>
+
+        {{#if isAuthenticated}}
+        <a class="btn btn-danger" href="/users/logout">登出</a>
+        {{else}}
+        <a class="btn btn-success" href="/users/login">登入</a>
+        {{/if}}
+      </div>
     </nav>
   </header>
 
