modify: change type of password from text to password in register & login page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -16,7 +16,7 @@
   <div class="form-group row ml-2 mb-5">
     <label for="password" class="col-sm-2 col-form-label">密碼:</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control border-dark" id="password" name="password" placeholder="使用者密碼">
+      <input type="password" class="form-control border-dark" id="password" name="password" placeholder="使用者密碼">
     </div>
   </div>
 
