--- a/views/register.hbs
+++ b/views/register.hbs
@@ -30,14 +30,14 @@
   <div class="form-group row ml-2 mb-5">
     <label for="password" class="col-sm-2 col-form-label">密碼*:</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control border-dark" id="password" name="password" placeholder="使用者密碼">
+      <input type="password" class="form-control border-dark" id="password" name="password" placeholder="使用者密碼">
     </div>
   </div>
 
   <div class="form-group row ml-2 mb-5">
     <label for="confirm_password" class="col-sm-2 col-form-label">確認密碼*:</label>
     <div class="col-sm-5">
-      <input type="text" class="form-control border-dark" id="confirm_password" name="confirm_password"
+      <input type="password" class="form-control border-dark" id="confirm_password" name="confirm_password"
         placeholder="請再輸入一次密碼">
     </div>
   </div>
