--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,10 +2,9 @@
 <form action="/" method="GET">
   <div class="form-group ml-2 mb-5 col-sm-6 mr-auto ml-auto">
     <select class="form-control" id="sort-bar" name="categoryId">
-      <option value="{{selected_category._id}}">{{selected_category.name}}</option>
       <option value="">全部</option>
       {{#each categories}}
-      <option value="{{this._id}}">{{this.name}}</option>
+      <option value="{{this._id}}" {{#if this.isSelected}}selected{{/if}}>{{this.name}}</option>
       {{/each}}
     </select>
   </div>
